# stickers-pomodoro-windows

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  使用指南.html  贴纸番茄钟介绍.html
.github/workflows/: release.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  sounds.rs
src/components/: ErrorBoundary.tsx
src/hooks/: useProjects.ts  useSettings.ts  useStickers.ts  useSyncedRef.ts  useTimer.ts  useTodos.ts
src/lib/: audio.ts  palette.ts  platform.ts  stats.test.ts  stats.ts  storage.test.ts  storage.ts  timer.test.ts  timer.ts  todos.test.ts  todos.ts  trayForest.test.ts  trayForest.ts  types.ts
