[package]
name = "sticker-pomodoro"
version = "1.0.0"
description = "A cute sticker-style Pomodoro timer"
authors = ["Sticker Pomodoro"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
urlencoding = "2"
rodio = "0.19"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", features = ["NSHapticFeedback"] }
